# StravaDataAnalysis

./: .bandit  .gitignore  README.md  coach.py  dataPredication.py  dataPrediction.py  databaseAccess.py  getData.py  getTokens.py  initialiseTokens.py  processData.py  pyproject.toml  refreshTokens.py  strava.sqlite  visualiseData.py
.github/: dependabot.yml
.github/workflows/: cleanup-runs.yml  codeql-analysis.yml  generate-stats.yml  test-code.yml  workflow-pr.yaml
src/: generate_readme.py  getTokens.py  get_tokens.py  main.py
src/strava_data/: __init__.py  auth.py  config.py  generate_readme.py
src/strava_data/db/: __init__.py  dao.py  models.py
src/strava_data/ml/: __init__.py  pace_forecast.py  run_type_classifier.py  training_advisor.py  utils.py
src/strava_data/strava_api/: __init__.py  client.py
src/strava_data/strava_api/processing/: __init__.py  transform.py
src/strava_data/strava_api/visualisation/: __init__.py  graphs.py  graphs_distance.py  graphs_distribution.py  graphs_effort.py  graphs_pace.py  summary_cards.py  utils.py
src/strava_data/summaries/: stats.py
src/utils/: logger.py
